--- a/Assignments/Assignment 2/frontend/package.json
+++ b/Assignments/Assignment 2/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "^3.6.5",
+    "downloadjs": "^1.4.7",
+    "file-saver": "^2.0.5",
     "material-design-icons-iconfont": "5.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -24,6 +26,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "browserify-fs": "^1.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
